tests/typechecking/invalid/funAdd.ml
let rec f x y = x + y in 
f true 5